--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <div class="lsit" ></div>
+        <h1>Twitch streamers:</h1>
+        <div></div>
+        <ul>
+            <li><a href="#">FreeCodecamp</a> <p>Online</p></li>
+            <li><a href="#">Soda</a> <p>Offline</p></li>
+            <li><a href="#">Potato</a> <p>Online</p></li>
+        </ul>
     </div>
+
+<script src="script.js"></script>
 </body>
 </html>
