--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Twitch streamers:</h1>
         <div></div>
         <ul>
-            <li><a href="#">FreeCodecamp</a> <p>Online</p></li>
-            <li><a href="#">Soda</a> <p>Offline</p></li>
-            <li><a href="#">Potato</a> <p>Online</p></li>
+            <li><a href="#">freeCodecamp</a> <p id="freeCodecamp">Online</p></li>
+            <li><a href="#">sodapoppin</a> <p id="sodapoppin">Offline</p></li>
+            <li><a href="#">timthetatman</a> <p id="timthetatman">Online</p></li>
         </ul>
     </div>
 
